--- a/02-todo/server/package.json
+++ b/02-todo/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "index.js": "^0.0.3"
   }
 }
